after fixing the Name

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:fontFamily="sans-serif"
-        android:text="Dish"
+        android:text="Chef"
         android:textColor="@color/gray_2"
         android:textSize="34sp"
         android:textStyle="bold"
@@ -43,7 +43,7 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/alex_brush"
-        android:text="Diary"
+        android:text="Buddy"
         android:textColor="@color/holo_red"
         android:textSize="48sp"
         app:layout_constraintStart_toStartOf="@+id/textView7"
