--- a/app/src/main/res/drawable/gradient_3.xml
+++ b/app/src/main/res/drawable/gradient_3.xml
@@ -4,9 +4,9 @@
         <shape android:shape="rectangle">
             <gradient
                 android:angle="-135"
-                android:startColor="#FF4081"
-                android:centerColor="#FF4081"
-                android:endColor="#E040FB"
+                android:startColor="#FFFFFF"
+                android:centerColor="#FFFFFF"
+                android:endColor="#000000"
                 android:type="linear" />
         </shape>
     </item>
