--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <!-- Monday -->
+            <!-- Monday  view-->
             <TextView
                 android:id="@+id/textView12"
                 android:layout_width="wrap_content"
