--- a/app/src/main/res/drawable/gradient_3.xml
+++ b/app/src/main/res/drawable/gradient_3.xml
@@ -4,10 +4,12 @@
         <shape android:shape="rectangle">
             <gradient
                 android:angle="-135"
-                android:startColor="#EAEAEA"
-                android:centerColor="#444444"
-                android:endColor="#000000"
+                android:startColor="#FF3030"
+                android:centerColor="#FF8080"
+                android:endColor="#FFFFFF"
                 android:type="linear" />
+
+
         </shape>
     </item>
 </layer-list>
